tests/snapshots/cmd_generate_steps__multiple_run_steps_with_options.snap
---
source: tests/cmd_generate_steps.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run("echo step 1", { name: "First step" })
        run("cargo check", {
          name: "Check",
          working_directory: "./crates/core",
          env: { RUST_BACKTRACE: "1" },
        })
        run("cargo test", {
          name: "Test",
          shell: "bash",
          timeout_minutes: 15,
          continue_on_error: true,
          if: "success()",
        })
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      name: First step
      run: echo step 1
    - id: step_1
      name: Check
      run: cargo check
      working-directory: ./crates/core
      env:
        RUST_BACKTRACE: '1'
    - id: step_2
      name: Test
      run: cargo test
      shell: bash
      if: success()
      timeout-minutes: 15
      continue-on-error: true
