tests/snapshots/cmd_generate_steps__step_env_with_context.snap
---
source: tests/cmd_generate_steps.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps(ctx) {
        run("echo building", {
          env: {
            SHA: `${ctx.github.sha}`,
            RUNNER_OS: `${ctx.runner.os}`,
          },
        })
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo building
      env:
        SHA: ${{ github.sha }}
        RUNNER_OS: ${{ runner.os }}
