tests/snapshots/cmd_generate_steps__uses_name_and_if.snap
---
source: tests/cmd_generate_steps.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        uses("actions/checkout", {
          name: "Checkout code",
          if: "github.event_name == 'push'",
          continue_on_error: true,
          timeout_minutes: 5,
        })
        run("cargo build")
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      name: Checkout code
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      if: github.event_name == 'push'
      timeout-minutes: 5
      continue-on-error: true
    - id: step_1
      run: cargo build
