tests/snapshots/cmd_generate_steps__uses_with_inputs.snap
---
source: tests/cmd_generate_steps.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        uses("actions/checkout", {
          with: { ref: "develop", fetch_depth: "0", submodules: "true" },
        })
        run("cargo build")
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      with:
        ref: develop
        fetch_depth: '0'
        submodules: 'true'
    - id: step_1
      run: cargo build
